--- a/Webscrapping_Homegate-Selenium.ipynb
+++ b/Webscrapping_Homegate-Selenium.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,8 @@
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC"
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -775,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,28 +789,35 @@
     "        id_flat = re.split('[\\n]', id_raw)[1]\n",
     "        return id_flat\n",
     "    except:\n",
+    "        print(f'None id_flat value for {url}')\n",
     "        return None \n",
     "        \n",
     "        \n",
     "def flat_address():\n",
     "    try:\n",
-    "        address_find = WebDriverWait(driver, 10).until(\n",
+    "        address_find = WebDriverWait(driver, 5).until(\n",
     "                    EC.presence_of_element_located((By.CSS_SELECTOR, \"address.AddressDetails_address_3Uq1m\"))\n",
     "                    )\n",
     "        address = address_find.text\n",
     "        return address\n",
     "    except:\n",
+    "        print(f'None address value for {url}')\n",
     "        return None\n",
     "\n",
     "def flat_price():\n",
     "    try:\n",
-    "        price_find = WebDriverWait(driver, 10).until(\n",
+    "        price_find = WebDriverWait(driver, 5).until(\n",
     "                EC.presence_of_element_located((By.CSS_SELECTOR, \"div.SpotlightAttributes_value_2njuM\"))\n",
     "                )\n",
     "        price_raw = price_find.text\n",
-    "        price = float(re.findall(r'[0-9],[0-9]{3}',price_raw)[0].replace(',',''))\n",
-    "        return price\n",
+    "        try:\n",
+    "            price = float(re.findall(r'[0-9],[0-9]{3}',price_raw)[0].replace(',',''))\n",
+    "            return price\n",
+    "        except:\n",
+    "            price = float(re.findall(r'[0-9]{3}',price_raw)[0].replace(',',''))\n",
+    "            return price\n",
     "    except:\n",
+    "        print(f'None price value for {url}')\n",
     "        return None \n",
     "\n",
     "def flat_availability():\n",
@@ -818,9 +826,10 @@
     "            EC.presence_of_element_located((By.TAG_NAME, \"dd\"))\n",
     "        )\n",
     "    #     By.XPATH, \"/html/body/div[1]/main/div[2]/div/div[1]/div[1]/div[1]/div[3]/section[1]/div[2]/div[1]/dl/dd\"\n",
-    "        availability_raw = availability_find.text\n",
-    "        return availability_raw\n",
+    "        availability = availability_find.text\n",
+    "        return availability\n",
     "    except:\n",
+    "        print(f'None availability value for {url}')\n",
     "        return None\n",
     "    \n",
     "def flat_type():\n",
@@ -907,7 +916,7 @@
     "    \n",
     "def flat_features():\n",
     "    try:\n",
-    "        features_find = WebDriverWait(driver, 10).until(\n",
+    "        features_find = WebDriverWait(driver, 2).until(\n",
     "            EC.presence_of_element_located((By.CSS_SELECTOR, \"ul.FeaturesFurnishings_list_1HzQj\"))\n",
     "        )\n",
     "        features_raw = features_find.text\n",
@@ -923,6 +932,154 @@
    "metadata": {},
    "source": [
     "### Getting the urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('flats.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e91c5a13c68a4f248b590950a12cb1c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=288.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no more pages\n",
+      "\n",
+      "8 flats were added to the dataframe\n"
+     ]
+    }
+   ],
+   "source": [
+    "flats_lst = []\n",
+    "more_pages = True\n",
+    "total_flats_find = WebDriverWait(driver, 10).until(\n",
+    "                EC.presence_of_element_located((By.XPATH, '//*[@class=\"ResultsNumber_results_3cf8J ResultListHeader_locations_3uuG8\"]'))\n",
+    "                )\n",
+    "total_flat = float(total_flats_find.text.split()[0])\n",
+    "pbar = tqdm(total=total_flat)\n",
+    "\n",
+    "while more_pages:\n",
+    "    main = WebDriverWait(driver, 10).until(\n",
+    "                EC.presence_of_all_elements_located((By.XPATH, '//*[@data-test=\"result-list-item\"]'))\n",
+    "                )\n",
+    "    urls = [i.get_attribute('href') for i in main]\n",
+    "    main_url = driver.current_url\n",
+    "       \n",
+    "    for url in urls:\n",
+    "        if url in df.link.values:\n",
+    "            pbar.update(1)\n",
+    "            continue\n",
+    "        else:\n",
+    "            try:\n",
+    "                driver.get(url)\n",
+    "\n",
+    "                # Creating a dictionary with the 'Main Information'\n",
+    "                key_type_find = WebDriverWait(driver, 10).until(\n",
+    "                    EC.presence_of_all_elements_located((By.XPATH, '//div[@class=\"CoreAttributes_coreAttributes_2UrTf\"]/dl/dt'))\n",
+    "                    )\n",
+    "                key_type = []\n",
+    "                for type in key_type_find:\n",
+    "                    key_type.append(type.text)\n",
+    "\n",
+    "                value_type_find = WebDriverWait(driver, 10).until(\n",
+    "                            EC.presence_of_all_elements_located((By.XPATH, '//div[@class=\"CoreAttributes_coreAttributes_2UrTf\"]/dl/dd'))\n",
+    "                            )\n",
+    "                value_type = []\n",
+    "                for type in value_type_find:\n",
+    "                    value_type.append(type.text)\n",
+    "                main_info_dict = dict(zip(key_type, value_type))\n",
+    "\n",
+    "                flats_dict = {'flat_ID': flat_ID(),\n",
+    "                              'address': flat_address(),\n",
+    "                              'price': flat_price(),\n",
+    "                              'availability': flat_availability(), \n",
+    "                              'type': flat_type(), \n",
+    "                              'n_of_rooms': flat_n_rooms(),\n",
+    "                              'floor': flat_floor(),\n",
+    "                              'n_of_floors': flat_n_floors(),\n",
+    "                              'surface_living': flat_surface(),\n",
+    "                              'floor_space': flat_floor_space(),\n",
+    "                              'room_height': flat_Room_height(),\n",
+    "                              'last_refurbishment': flat_last_refurbishment(),\n",
+    "                              'year_built': flat_year(),\n",
+    "                              'link': driver.current_url,\n",
+    "                              'features': flat_features(),\n",
+    "                            }\n",
+    "                flats_lst.append(flats_dict)\n",
+    "                pbar.update(1)\n",
+    "            except:\n",
+    "                pbar.close()\n",
+    "                df = df.append(flats_lst,ignore_index=True)\n",
+    "                df.to_csv('flats.csv')\n",
+    "                raise Exception('aaa')\n",
+    "            \n",
+    "    try:\n",
+    "        driver.get(main_url)\n",
+    "        next_page = WebDriverWait(driver, 5).until(\n",
+    "                EC.presence_of_element_located((By.XPATH, '//*[@aria-label=\"Go to next page\"]'))\n",
+    "                )\n",
+    "        next_page.click()\n",
+    "    except:\n",
+    "        more_pages = False\n",
+    "        print('no more pages')\n",
+    "        pbar.close()\n",
+    "        print(f'{len(flats_lst)} flats were added to the dataframe')\n",
+    "        df = df.append(flats_lst, ignore_index=True)\n",
+    "        df.to_csv('flats.csv')\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df= df.drop(df.iloc[:,:3],1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1109"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.flat_ID.nunique()"
    ]
   },
   {
