--- a/Webscrapping_Homegate-Selenium-copy.ipynb
+++ b/Webscrapping_Homegate-Selenium-copy.ipynb
@@ -53,54 +53,56 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mre\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m webdriver\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "import re\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.chrome.options import Options\n",
     "from tqdm.notebook import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# As my chosen browser is chrome 89, I must match this to chromedriver 89.0.4389.23\n",
     "# To download: https://sites.google.com/a/chromium.org/chromedriver/downloads\n",
-    "path = \"C:\\Program Files (x86)\\chromedriver.exe\"\n",
-    "driver = webdriver.Chrome(path)"
+    "#path = \"C:\\Program Files (x86)\\chromedriver.exe\"\n",
+    "#driver = webdriver.Chrome(path)\n",
+    "\n",
+    "options = Options()\n",
+    "# options.add_argument(\"--headless\")  # Run in headless mode\n",
+    "# options.add_argument(\"--disable-gpu\")  # Disable GPU acceleration\n",
+    "# options.add_argument(\"--no-sandbox\")  # Disable sandboxing\n",
+    "options.add_argument('--disable-dev-shm-usage')\n",
+    "options.add_argument(\"--window-size=1500,1080\")\n",
+    "# driver = webdriver.Chrome(service=ChromeService(ChromeDriverManager().install()))\n",
+    "\n",
+    "\n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Apartment & house for rent in Zurich (Zürich) | homegate.ch\n"
+      "1173 Property for rent in Zurich | homegate.ch\n"
      ]
     }
    ],
@@ -121,7 +123,18 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.12.3' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/usr/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "def flat_ID():\n",
     "    try:\n",
@@ -1091,7 +1104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "homegate",
    "language": "python",
    "name": "python3"
   },
